# aerogram

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  clippy.toml  deny.toml  lefthook.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: bump.yml  ci.yml  docs.yml  integration.yml  release.yml
crates/aerogram/: Cargo.toml
crates/aerogram-admin/: Cargo.toml
crates/aerogram-admin/src/: lib.rs
crates/aerogram-api/: Cargo.toml
crates/aerogram-api/src/: lib.rs
crates/aerogram-auth/: Cargo.toml
crates/aerogram-auth/src/: lib.rs
crates/aerogram-config/: Cargo.toml
crates/aerogram-config/src/: lib.rs
crates/aerogram-core/: Cargo.toml
crates/aerogram-core/src/: lib.rs
crates/aerogram-dkim/: Cargo.toml
crates/aerogram-dkim/src/: lib.rs
crates/aerogram-events/: Cargo.toml
crates/aerogram-events/src/: lib.rs
crates/aerogram-imap/: Cargo.toml
crates/aerogram-imap/src/: lib.rs
crates/aerogram-jmap/: Cargo.toml
crates/aerogram-jmap/src/: lib.rs
crates/aerogram-queue/: Cargo.toml
crates/aerogram-queue/src/: lib.rs
crates/aerogram-search/: Cargo.toml
crates/aerogram-search/src/: lib.rs
crates/aerogram-server/: Cargo.toml
crates/aerogram-server/src/: lib.rs
crates/aerogram-smtp/: Cargo.toml
crates/aerogram-smtp/src/: lib.rs
crates/aerogram-spam/: Cargo.toml
crates/aerogram-spam/src/: lib.rs
crates/aerogram-spf-dmarc/: Cargo.toml
crates/aerogram-spf-dmarc/src/: lib.rs
crates/aerogram-store/: Cargo.toml
crates/aerogram-store/src/: lib.rs
crates/aerogram/src/: main.rs
docs/: GOVERNANCE.md  MSRV_POLICY.md  RELEASE_PROCESS.md  SEMVER_POLICY.md  getting-started.md
docs/design/: architecture.md  interop.md  mailbox-model.md
docs/explanation/: roadmap.md
docs/spec/: api-v1.md
examples/: README.md
examples/01-send-transactional/: README.md
examples/02-self-hosted-oidc/: README.md
examples/03-full-mail-server/: README.md
scripts/: publish-or-skip.sh  release.sh
xtask/: Cargo.toml
xtask/src/: main.rs
