[workspace]
resolver = "3"
members = [
    "crates/aerogram-core",
    "crates/aerogram-config",
    "crates/aerogram-smtp",
    "crates/aerogram-dkim",
    "crates/aerogram-spf-dmarc",
    "crates/aerogram-queue",
    "crates/aerogram-store",
    "crates/aerogram-search",
    "crates/aerogram-jmap",
    "crates/aerogram-imap",
    "crates/aerogram-api",
    "crates/aerogram-admin",
    "crates/aerogram-auth",
    "crates/aerogram-spam",
    "crates/aerogram-events",
    "crates/aerogram-server",
    "crates/aerogram",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nubster-opensources/aerogram"
homepage = "https://nubster.com"
authors = ["Nubster"]
keywords = ["email", "smtp", "jmap", "imap", "mail-server"]
categories = ["email", "network-programming", "web-programming::http-server"]

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "process", "sync", "time", "net", "fs", "io-util"] }
tokio-util = { version = "0.7", default-features = false }
async-trait = "0.1"
futures = "0.3"
trait-variant = "0.1"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
toml = "0.8"

# errors + logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# identifiers + time
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

# http stack
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "limit", "timeout"] }
hyper = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }

# crypto + tls
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
jsonwebtoken = "9"

# email primitives
mail-parser = "0.9"
mail-builder = "0.3"
lettre = { version = "0.11", default-features = false, features = ["builder", "tokio1-rustls-tls", "smtp-transport", "tracing"] }

# dns
hickory-resolver = { version = "0.24", default-features = false, features = ["tokio-runtime", "system-config"] }

# storage
tantivy = "0.22"
aws-sdk-s3 = { version = "1", default-features = false, features = ["rustls", "rt-tokio"] }
aws-config = { version = "1", default-features = false, features = ["rustls", "rt-tokio"] }

# templating + cli
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.5"
clap = { version = "4", features = ["derive", "env"] }

# misc
indexmap = { version = "2", features = ["serde"] }
bytes = "1"
humantime = "2"
humantime-serde = "1"

# nubster ecosystem (default convenient option, optional features)
hexeract = "0.1"
hexeract-outbox = "0.1"
hexeract-outbox-postgres = "0.1"

# dev
assert_cmd = "2"
predicates = "3"
testcontainers = "0.23"
criterion = { version = "0.5", features = ["async_tokio"] }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unreachable_pub = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
