[package]
name = "aerogram-admin"
description = "Aerogram admin and webmail SSR: Askama + HTMX dashboards for self-hosted operators."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
aerogram-core = { path = "../aerogram-core", version = "0.1.0" }
aerogram-auth = { path = "../aerogram-auth", version = "0.1.0" }
axum = { workspace = true }
askama = { workspace = true }
askama_axum = { workspace = true }
tower-http = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
