[package]
name = "aerogram-config"
description = "Aerogram configuration model: TOML parsing, cross-section validation, hot-reload."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
aerogram-core = { path = "../aerogram-core", version = "0.1.0" }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
humantime-serde = { workspace = true }

[lints]
workspace = true
