[package]
name = "aerogram-dkim"
description = "Aerogram DKIM signing and verification: Ed25519 (RFC 8463) and RSA-SHA256 (RFC 6376)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
aerogram-core = { path = "../aerogram-core", version = "0.1.0" }
ed25519-dalek = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hickory-resolver = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
