[package]
name = "aerogram-imap"
description = "Aerogram IMAP4rev2 listener (RFC 9051): compat shim mapping onto the JMAP backend."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
aerogram-core = { path = "../aerogram-core", version = "0.1.0" }
aerogram-store = { path = "../aerogram-store", version = "0.1.0" }
aerogram-jmap = { path = "../aerogram-jmap", version = "0.1.0" }
aerogram-auth = { path = "../aerogram-auth", version = "0.1.0" }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
