[package]
name = "aerogram-jmap"
description = "Aerogram JMAP server: RFC 8620 core, RFC 8621 mail, search, submission."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
aerogram-core = { path = "../aerogram-core", version = "0.1.0" }
aerogram-store = { path = "../aerogram-store", version = "0.1.0" }
aerogram-search = { path = "../aerogram-search", version = "0.1.0" }
aerogram-auth = { path = "../aerogram-auth", version = "0.1.0" }
async-trait = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }

[lints]
workspace = true
