[package]
name = "aerogram-queue"
description = "Aerogram outbound delivery queue: PostgreSQL-backed, retry, exponential backoff, dead-letter."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
aerogram-core = { path = "../aerogram-core", version = "0.1.0" }
async-trait = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
humantime-serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
