[package]
name = "aerogram"
description = "Self-hosted Rust email server: SMTP MTA, JMAP, IMAP, transactional API, DKIM/SPF/DMARC, multi-tenant, with no vendor lock-in."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "aerogram"
path = "src/main.rs"

[dependencies]
aerogram-server = { path = "../aerogram-server", version = "0.1.0" }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
s3 = ["aerogram-server/s3"]
hexeract = ["aerogram-server/hexeract"]

[lints]
workspace = true
